--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Pedro Abel Diaz",
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^2.8.1",
-    "graphql": "^14.4.2"
+    "graphql": "^14.4.2",
+    "mongoose": "^5.6.11",
+    "mongoose-unique-validator": "^2.0.3"
   }
 }
